--- a/shop.html
+++ b/shop.html
@@ -165,7 +165,7 @@
   color: rgba(106,79,235,0.1);
 }
 #huntr-react-container-2 {
-  font-smoothing: antialiased;
+  -webkit-font-smoothing: antialiased;
   -webkit-font-smoothing: antialiased;
   position: absolute;
   display: block !important;
